--- a/package.json
+++ b/package.json
@@ -33,7 +33,10 @@
     "eslint": "^9.36.0",
     "express": "^5.1.0",
     "express-rate-limit": "^8.1.0",
+    "express-validator": "^7.2.1",
     "helmet": "^8.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.2",
     "mysql2": "^3.15.1",
     "sequelize": "^6.37.7",
     "sequelize-typescript": "^2.1.6",
@@ -45,6 +48,8 @@
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/jest": "^30.0.0",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/multer": "^2.0.0",
     "@types/node": "^24.5.2",
     "jest": "^30.1.3",
     "ts-jest": "^29.4.4",
