--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
     "mysql2": "^3.15.1",
+    "nodemailer": "^7.0.11",
     "sequelize": "^6.37.7",
     "sequelize-typescript": "^2.1.6",
     "supertest": "^7.1.4",
@@ -51,6 +52,7 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/multer": "^2.0.0",
     "@types/node": "^24.5.2",
+    "@types/nodemailer": "^7.0.4",
     "jest": "^30.1.3",
     "ts-jest": "^29.4.4",
     "ts-node-dev": "^2.0.0",
