updated survey module

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,7 @@
     "noUncheckedIndexedAccess": true,
     "exactOptionalPropertyTypes": true,
     "experimentalDecorators": true,
-    "emitDecoratorMetadata": true,
+    "emitDecoratorMetadata": false,
 
     // Style Options
     // "noImplicitReturns": true,
