--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
     "mysql2": "^3.15.1",
+    "node-cron": "^4.2.1",
     "nodemailer": "^7.0.11",
     "sequelize": "^6.37.7",
     "sequelize-typescript": "^2.1.6",
